--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
+/* Basics */
 @import "bourbon";
 @import "bitters/bitters"; 
 @import "neat";
@@ -7,4 +8,7 @@
 /* Partials */
 @import "partials/layout";
 @import "partials/nav";
+@import "partials/nav_home";
 @import "partials/footer";
+@import "partials/font_face";
+@import "partials/home";
