--- a/source/stylesheets/bitters/_variables.scss
+++ b/source/stylesheets/bitters/_variables.scss
@@ -15,13 +15,17 @@ $base-border-radius: em(3);
 // Colors
 ///////////////////////////////////////////////////////////////////////////////
 
-$blue: #0a89be;
+$blue: #0db8ff;
+$dark-blue: #0a89be;
 $dark-gray: #242424;
 $medium-gray: #999;
-$light-gray: #DDD;
+$light-gray: #d0dbe1;
+$medium-gray: #d7d7d7;
 $light-red: #FBE3E4;
 $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
+$green: #94b561;
+$dark-green: #526632;
 
 // Body Color
 $base-body-color: #e4e4e4;
