--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -1,3 +1,6 @@
 %footer
   .container
-    footer
+    .THG
+      %a{href: "http://hybridgroup.com/", target: :blank}
+        %img{src: "../stylesheets/images/THG.png", height: "30"}
+    %p.copy &copy; Copyright 2014.
