--- a/source/partials/_nav_home.html.haml
+++ b/source/partials/_nav_home.html.haml
@@ -1,5 +1,18 @@
-%header.home-menu
-  %nav
-    %ul
-      %li
-        Gort  
+- if current_page.data.homeMenu == true
+  %header.home-menu
+    = partial "partials/menu"
+      
+    .hero
+      .col7
+        %h2 
+          %span.blue GORT 
+          is a Command Line Interface 
+          %span.blue (CLI) 
+          for RobotOps
+          .square 
+        %h5 Gort provides tools to scan for connected devices, upload firmware, and more.
+      .col5
+        other
+-else
+  %header.menu
+    = partial "partials/menu"
