--- a/source/stylesheets/partials/_layout.scss
+++ b/source/stylesheets/partials/_layout.scss
@@ -1,7 +1,29 @@
 body {
 	background: $base-body-color;
+	color: $dark-gray;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	
+	font-family: 'Vera-Bold', Helvetica, sans-serif;
 }
 
 #main {
     @include outer-container;
+    margin: em(20) auto;
+}
+
+.blue {
+    color: $blue;
+}
+
+pre {
+
+	background: lighten($dark-gray, 10);
+	padding: em(5);
+	margin: 0;
+	@include border-top-radius(5px);
+	@include border-bottom-radius(5px);
+	@include border-left-radius(5px);
+	@include border-right-radius(5px);
 }
