--- a/source/stylesheets/partials/_nav_home.scss
+++ b/source/stylesheets/partials/_nav_home.scss
@@ -1,6 +1,6 @@
-.menu {
+.home-menu {
 	
-	background: $dark-blue;
+	background: $dark-gray;
 	color: white;
 	padding: em(20) 0;
 
@@ -10,14 +10,13 @@
 		float: left;
 		padding: 0;
 		margin: 0;
-
 		&:hover {
 			background: transparent;
 		}
 
 		h1 {
 			font-family: 'Roboto', Helvetica, sans-serif;
-			background: url(images/iconB.png) no-repeat left center;
+			background: url(images/icon.png) no-repeat left center;
 			background-size: 45px;
 			padding-left: 50px;
 		}
@@ -47,12 +46,6 @@
 	    		background: $blue;
 	    		color: white;
 	    	}
-	    }
-
-	    .active {
-	    	
-	    	background: $blue;
-	    	color: white;
 	    }
 
 	    .github a{
