base for sidebar docs

--- a/source/layouts/documentation.haml
+++ b/source/layouts/documentation.haml
@@ -1,3 +1,7 @@
 - wrap_layout :layout do
   .documentation
-    = yield
+    .container
+      .side-bar
+        = partial "/documentation/side_bar"
+      .content
+        = yield
