--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -6,6 +6,7 @@
     %title= current_page.data.title
     %link{href: "/stylesheets/normalize.css", rel: "stylesheet"}
     %link{href: "/stylesheets/all.css", rel: "stylesheet"}
+    %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"}
   
   %body
 
