--- a/source/documentation/getting_started/index.html.haml
+++ b/source/documentation/getting_started/index.html.haml
@@ -4,6 +4,7 @@ layout: documentation
 active_docs: true
 ---
 
-%div
-  %h1 Welcome to Gort
-  
+.content-info
+  %h1.title  Title
+  .description
+    fdfdf
