--- a/source/stylesheets/bitters/_variables.scss
+++ b/source/stylesheets/bitters/_variables.scss
@@ -38,6 +38,9 @@ $base-accent-color: $blue;
 $base-link-color: $base-accent-color;
 $hover-link-color: darken($base-accent-color, 15);
 
+// Side Bar color
+$side-bar-color: #f0f0f0;
+
 // Border color
 $base-border-color: $light-gray;
 
