base docs and favicon

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,7 +1,11 @@
 ---
 title: Welcome to Gort
+author: The Hybrid Group
+description: Gort Getting Started
+
 homeMenu: true
 grayBackground: true
+
 title_gray: Getting Started
 description_gray: 'We now have precompiled binaries! You can also build from source.<br>
 The Gort CLI provides many useful features on many hardware platforms, and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & Johnny-Five.'
