--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -2,5 +2,5 @@
   .container
     .THG
       %a{href: "http://hybridgroup.com/", target: :blank}
-        %img{src: "../stylesheets/images/THG.png", height: "30"}
+        %img{src: "../../stylesheets/images/THG.png", height: "30"}
     %p.copy &copy; Copyright 2014.
