--- a/source/stylesheets/partials/_home.scss
+++ b/source/stylesheets/partials/_home.scss
@@ -52,4 +52,15 @@
 	.description {
 		padding: em(20);
 	}
+
+	pre {
+
+		background: lighten($dark-gray, 10);
+		padding: em(5);
+		margin: 0;
+		@include border-top-radius(5px);
+		@include border-bottom-radius(5px);
+		@include border-left-radius(5px);
+		@include border-right-radius(5px);
+	}
 }
