--- a/source/stylesheets/partials/_documentation.scss
+++ b/source/stylesheets/partials/_documentation.scss
@@ -1,5 +1,24 @@
 .documentation {
 	
+	h1,h2,h3,h4,h5,h6 {
+	
+		font-family: Helvetica, sans-serif;
+		font-weight: 500;
+	}
+
+	pre {
+
+		font-size: 10pt;
+		background: lighten($dark-gray, 10);
+		padding: em(20);
+		color: $side-bar-color;
+		margin: em(20p) 0;
+		@include border-top-radius(5px);
+		@include border-bottom-radius(5px);
+		@include border-left-radius(5px);
+		@include border-right-radius(5px);
+	}
+	
 	.container {
 		@include outer-container;
 		padding: em(20) 0;
@@ -8,24 +27,84 @@
 
 			@include span-columns(3);
 			background: $side-bar-color;
-			padding: em(10) em(20);
+			padding: em(20) em(30);
 			@include border-top-radius(5px);
 			@include border-bottom-radius(5px);
 			@include border-left-radius(5px);
 			@include border-right-radius(5px);
+
+			ul {
+
+				.active {
+
+					&:before {
+					    content: "● ";
+					    color: red; /* or whatever color you prefer */
+					    margin-left: -10px;
+					}
+				}
+				
+				.title {
+
+					border-bottom: 1px solid white;
+
+					a.title-inside {
+
+						text-transform: uppercase;
+						font-size: 10pt;
+						color: lighten($dark-gray,30);
+						padding: em(10) 0;
+						display: inline-block;
+
+						&:hover {
+
+							color: $dark-gray;
+						}
+					}
+
+					ul {
+
+						padding-left: 30px;
+						padding-bottom: 10px;
+						color: lighten($dark-gray,30);
+						li {
+
+							font-size: 10pt;
+							a {
+
+								color: lighten($dark-gray,30);
+
+								&:hover {
+
+									color: $dark-gray;
+								}
+							}
+						}
+					}
+				} 
+			}
 		}
 		.content {
 
 			@include span-columns(9);
-
+			color: #666;
+			
 			.content-info {
 
-				.title {
+				padding-bottom: 200px;
+
+				ul {
+
+					list-style: square;
+					margin-left: em(40);
+				}
+
+				.title-top {
 
 					font-family: Helvetica, sans-serif;
 					border-bottom: 1px solid $light-gray;
 					color: #666;
-					font-weight: 100;
+					font-weight: 500;
 					padding: em(5px);
 					padding-left: 70px;
 					background: url(images/title.png) no-repeat left center;
