add documentation info

--- a/source/documentation/cli/help.html.haml
+++ b/source/documentation/cli/help.html.haml
@@ -10,4 +10,12 @@ docs_cli_help_active: true
 .content-info
   %h1.title-top Help
   .description
-    fdfdf
+    %h3 
+      %b gort [global options] command [command options] [arguments...]
+    %br
+    %h4 Description
+    %p Shows a list of commands or help for one command.
+    :markdown
+          $ gort help 
+          Usage:
+          gort help, h
