--- a/source/documentation/cli/bluetooth.html.haml
+++ b/source/documentation/cli/bluetooth.html.haml
@@ -10,4 +10,14 @@ docs_cli_bluetooth_active: true
 .content-info
   %h1.title-top Bluetooth
   .description
-    fdfdf
+    %h3 
+      %b gort [global options] command [command options] [arguments...]
+    %br
+    %h4 Description
+    %p Pair, unpair & connect to bluetooth devices.
+    :markdown
+          $ gort bluetooth 
+          Usage:
+          gort bluetooth pair <address> [hciX]
+          gort bluetooth unpair <address> [hciX]
+          gort bluetooth unpair <address> [hciX]
