--- a/source/documentation/cli/crazyflie.html.haml
+++ b/source/documentation/cli/crazyflie.html.haml
@@ -10,4 +10,14 @@ docs_cli_crazyflie_active: true
 .content-info
   %h1.title-top Crazyflie
   .description
-    fdfdf
+    %h3 
+      %b gort [global options] command [command options] [arguments...]
+    %br
+    %h4 Description
+    %p Configure your Crazyflie.
+    :markdown
+          $ gort crazyflie 
+          Usage:
+          gort crazyflie set-udev-rules # set udev rules needed to connect to Crazyflie
+
+
