--- a/source/documentation/cli/klaatu.html.haml
+++ b/source/documentation/cli/klaatu.html.haml
@@ -10,4 +10,11 @@ docs_cli_klaatu_active: true
 .content-info
   %h1.title-top Klatuu
   .description
-    fdfdf
+    %h3 
+      %b gort [global options] command [command options] [arguments...]
+    %br
+    %h4 Description
+    %p barada nikto.
+    :markdown
+          $ gort klaatu barada nikto 
+         
