--- a/source/documentation/cli/spark.html.haml
+++ b/source/documentation/cli/spark.html.haml
@@ -10,4 +10,12 @@ docs_cli_spark_active: true
 .content-info
   %h1.title-top Spark
   .description
-    fdfdf
+    %h3 
+      %b gort [global options] command [command options] [arguments...]
+    %br
+    %h4 Description
+    %p Upload sketches to your Spark.
+    :markdown
+          $ gort spark 
+          Usage:
+          gort spark upload [accessToken] [deviceId] [default|voodoospark|path name] # uploads sketch to Spark
