--- a/source/partials/_menu.html.haml
+++ b/source/partials/_menu.html.haml
@@ -7,6 +7,6 @@
       = link_to "GITHUB", "https://github.com/hybridgroup/gort-site", target: :blank
     %li 
       - if current_page.data.active_docs == true
-        = link_to "DOCS", "/documentation/getting_started", class: "active"
+        = link_to "DOCS", "/documentation/cli", class: "active"
       - else
-        = link_to "DOCS", "/documentation/getting_started"
+        = link_to "DOCS", "/documentation/cli"
