--- a/source/stylesheets/partials/_documentation.scss
+++ b/source/stylesheets/partials/_documentation.scss
@@ -23,7 +23,13 @@
 		@include outer-container;
 		padding: em(20) 0;
 
+		
 		.side-bar {
+
+			@media screen and (min-width: 320px) and (max-width: 480px) {
+		  		@include span-columns(12);
+			}
+
 
 			@include span-columns(3);
 			background: $side-bar-color;
@@ -87,6 +93,11 @@
 		.content {
 
 			@include span-columns(9);
+			@media screen and (min-width: 320px) and (max-width: 480px) {
+		  		@include span-columns(12);
+		  		margin-top: em(20);
+		  		padding: em(10);
+			}
 			color: #666;
 			
 			.content-info {
