--- a/source/stylesheets/partials/_nav_home.scss
+++ b/source/stylesheets/partials/_nav_home.scss
@@ -1,37 +1,45 @@
 .home-menu {
 	
+	.container {
+		@include outer-container;
+	}
+
 	background: $dark-gray;
 	color: white;
 	padding: em(20) 0;
 
-	.logo a{
+	.logo {
+		@include span-columns(2);
+	
+		a {
 
-		border: none;
-		float: left;
-		padding: 0;
-		margin: 0;
-		&:hover {
-			background: transparent;
-		}
+			border: none;
+			padding: 0;
+			margin: 0;
+			color: white;
+			&:hover {
+				background: transparent;
+			}
 
-		h1 {
-			font-family: 'Roboto', Helvetica, sans-serif;
-			background: url(images/icon.png) no-repeat left center;
-			background-size: 45px;
-			padding-left: 50px;
+			h1 {
+				font-family: 'Roboto', Helvetica, sans-serif;
+				background: url(images/icon.png) no-repeat left center;
+				background-size: 45px;
+				padding-left: 50px;
+			}
+			
 		}
-		
-	}
+	} 
 
 	nav {
-	  @include outer-container;
+
+	  @include span-columns(10);
 	  font-family: 'Roboto', Helvetica, sans-serif;
 
 	  ul {
-	    display: inline-block;
+
 	    @include span-columns(12);
 	    margin-bottom: em(10);
-
 
 	    a {
 	    	float: right;
@@ -75,11 +83,25 @@
 		.col7 {
 			@include span-columns(7);
 			@include omega();
+
+
 		}
 		.col5 {
 			@include span-columns(5);
 			@include omega();
 		}
+
+		@media screen and (min-width: 320px) and (max-width: 480px) {
+		  	.col7 {
+				@include span-columns(12);
+				padding: em(10);
+			}
+			.col5 {
+				@include span-columns(12);
+				padding: em(10);
+			}
+		}
+
 		.square {
 			background: $blue;
 			width: 15px;
