--- a/source/partials/_nav_home.html.haml
+++ b/source/partials/_nav_home.html.haml
@@ -12,6 +12,7 @@
           .square 
         %h5 Gort provides tools to scan for connected devices, upload firmware, and more.
       .col5
+        %script{type:"text/javascript", src:"https://asciinema.org/a/10274.js", id:"asciicast-10274"}
         
 -else
   %header.menu
