--- a/source/partials/_nav_home.html.haml
+++ b/source/partials/_nav_home.html.haml
@@ -1,19 +1,19 @@
 - if current_page.data.homeMenu == true
   %header.home-menu
     = partial "partials/menu"
-      
+
     .hero
       .col7
-        %h2 
-          %span.blue GORT 
-          is a Command Line Interface 
-          %span.blue (CLI) 
+        %h2
+          %span.blue GORT
+          is a Command Line Interface
+          %span.blue (CLI)
           for RobotOps
-          .square 
+          .square
         %h5 Gort provides tools to scan for connected devices, upload firmware, and more.
       .col5
-        %script{type:"text/javascript", src:"https://asciinema.org/a/10274.js", id:"asciicast-10274"}
-        
+        %script{type:"text/javascript", src:"https://asciinema.org/a/10306.js", id:"asciicast-10306", "data-autoplay" => "1"}
+
 -else
   %header.menu
     = partial "partials/menu"
