--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -2,8 +2,9 @@
 
 /* Basics */
 @import "bourbon";
-@import "bitters/bitters"; 
+@import "bitters/bitters";
 @import "neat";
+@import "font-awesome";
 
 /* Partials */
 @import "partials/layout";
