--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -9,7 +9,7 @@ grayBackground: true
 title_gray: Getting Started
 description_gray: 'We now have precompiled binaries! You can also build from source.<br>
 The Gort CLI provides many useful features on many hardware platforms, and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & Johnny-Five.'
-button_gray: '<a href="https://github.com/hybridgroup/gort#downloads" target="_blank">DOWNLOAD<br><p>OSX / WINDOWS / LINUX</p></a>'
+button_gray: '<a href="/documentation/getting_started/downloads">DOWNLOAD<br><p>OSX / WINDOWS / LINUX</p></a>'
 
 layout: home
 ---
@@ -22,7 +22,7 @@ layout: home
           $ ./gort
           NAME:
              gort - Command Line Utility for RobotOps
-          
+
           USAGE:
              gort [global options] command [command options] [arguments...]
 
@@ -59,4 +59,3 @@ layout: home
     %p Once installed, you build the assets into the project like this:
     :markdown
           cd commands && go-bindata -pkg="commands" support/... && cd ..
-
