--- a/source/stylesheets/partials/_documentation.scss
+++ b/source/stylesheets/partials/_documentation.scss
@@ -1,9 +1,37 @@
 .documentation {
-	
+
 	h1,h2,h3,h4,h5,h6 {
-	
+
 		font-family: Helvetica, sans-serif;
 		font-weight: 500;
+	}
+
+	.green-button {
+		display: inline-block;
+		a {
+
+			background: $green;
+			margin-top: em(20);
+			padding: em(10) em(20);
+			@include border-top-radius(5px);
+			@include border-bottom-radius(5px);
+			@include border-left-radius(5px);
+			@include border-right-radius(5px);
+			line-height: em(17);
+			float: left;
+			color: $dark-gray;
+			p {
+
+				color: $dark-gray;
+				margin: 0;
+				font-size: 10pt;
+			}
+
+			&:hover {
+				background: darken($green,5);
+
+			}
+		}
 	}
 
 	pre {
@@ -18,12 +46,12 @@
 		@include border-left-radius(5px);
 		@include border-right-radius(5px);
 	}
-	
+
 	.container {
 		@include outer-container;
 		padding: em(20) 0;
 
-		
+
 		.side-bar {
 
 			@media screen and (min-width: 320px) and (max-width: 480px) {
@@ -49,7 +77,7 @@
 					    margin-left: -10px;
 					}
 				}
-				
+
 				.title {
 
 					border-bottom: 1px solid white;
@@ -87,7 +115,7 @@
 							}
 						}
 					}
-				} 
+				}
 			}
 		}
 		.content {
@@ -99,7 +127,7 @@
 		  		padding: em(10);
 			}
 			color: #666;
-			
+
 			.content-info {
 
 				padding-bottom: 200px;
@@ -124,5 +152,5 @@
 			}
 		}
 	}
-	
+
 }
