--- a/source/stylesheets/partials/_home.scss
+++ b/source/stylesheets/partials/_home.scss
@@ -1,12 +1,12 @@
 .welcome {
-	
+
 	background: $medium-gray;
 	padding: em(40);
 
 	.container {
 		@include outer-container;
 
-		.green-button {
+		.green-button a {
 
 			background: $green;
 			margin-top: em(20);
@@ -17,15 +17,12 @@
 			@include border-right-radius(5px);
 			line-height: em(17);
 			display: inline-block;
+			color: $dark-gray;
+			p {
 
-			a {
-				color: $dark-gray;
-				p {
-
-					color: $dark-green;
-					margin: 0;
-					font-size: 10pt;
-				}
+				color: $dark-green;
+				margin: 0;
+				font-size: 10pt;
 			}
 
 			&:hover {
@@ -37,7 +34,7 @@
 }
 
 .how-to-use {
-	
+
 	background: $dark-gray;
 	color: white;
 	margin-bottom: em(20);
