--- a/source/stylesheets/partials/_nav_home.scss
+++ b/source/stylesheets/partials/_nav_home.scss
@@ -1,16 +1,16 @@
 .home-menu {
-	
+
 	.container {
 		@include outer-container;
 	}
 
 	background: $dark-gray;
 	color: white;
-	padding: em(20) 0;
+	padding: em(20) 0 0 0;
 
 	.logo {
 		@include span-columns(2);
-	
+
 		a {
 
 			border: none;
@@ -27,9 +27,9 @@
 				background-size: 45px;
 				padding-left: 50px;
 			}
-			
+
 		}
-	} 
+	}
 
 	nav {
 
@@ -57,10 +57,7 @@
 	    }
 
 	    .github a{
-	    	background: url(images/github.png) no-repeat left center;
-			background-size: 40px;
-			padding-left: 55px;
-			&:hover {
+				&:hover {
 	    		background: $blue;
 	    		color: white;
 	    	}
@@ -69,7 +66,7 @@
 	}
 
 	.hero {
-		
+
 		@include outer-container;
 
 		h2,h5 {
