--- a/source/partials/_nav_home.html.haml
+++ b/source/partials/_nav_home.html.haml
@@ -6,9 +6,7 @@
       .col7
         %h2
           %span.blue GORT
-          is a Command Line Interface
-          %span.blue (CLI)
-          for RobotOps
+          is a Command Line Toolkit for RobotOps
           .square
         %h5 Gort provides tools to scan for connected devices, upload firmware, and more.
       .col5
