Updates for 0.2.0 release

--- a/source/documentation/getting_started/index.html.haml
+++ b/source/documentation/getting_started/index.html.haml
@@ -22,18 +22,18 @@ docs_home_active: true
              gort [global options] command [command options] [arguments...]
 
           VERSION:
-             0.1.0
+             0.2.0
 
           COMMANDS:
              scan   Scan for connected devices on Serial, USB, or Bluetooth ports
-             bluetooth  Scan, pair, unpair bluetooth devices. Establishes serial to Bluetooth connection.
+             bluetooth  Pair, unpair & connect to bluetooth devices.
              arduino  Install avrdude, and upload sketches to your Arduino
              spark  Upload sketches to your Spark
              digispark  Configure your Digispark microcontroller
              crazyflie  Configure your Crazyflie
              klaatu barada nikto
              help, h  Shows a list of commands or help for one command
-
+             
           GLOBAL OPTIONS:
              --version, -v  print the version
              --help, -h   show help
