--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -3,4 +3,4 @@
     .THG
       %a{href: "http://hybridgroup.com/", target: :blank}
         %img{src: "/stylesheets/images/THG.png", height: "30"}
-    %p.copy &copy; Copyright 2014.
+    %p.copy &copy; Copyright 2014 The Hybrid Group
