--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -7,8 +7,7 @@ homeMenu: true
 grayBackground: true
 
 title_gray: Getting Started
-description_gray: 'We now have precompiled binaries! You can also build from source.<br>
-The Gort CLI provides many useful features on many hardware platforms, and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & Johnny-Five.'
+description_gray: 'The Gort CLI provides many useful features on many hardware platforms, and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & Johnny-Five. And more!'
 button_gray: '<a href="/documentation/getting_started/downloads">DOWNLOAD<br><p>OSX / WINDOWS / LINUX</p></a>'
 
 layout: home
@@ -27,7 +26,7 @@ layout: home
              gort [global options] command [command options] [arguments...]
 
           VERSION:
-             0.1.0
+             0.2.0
 
           COMMANDS:
              scan   Scan for connected devices on Serial, USB, or Bluetooth ports
@@ -38,7 +37,7 @@ layout: home
              crazyflie  Configure your Crazyflie
              klaatu barada nikto
              help, h  Shows a list of commands or help for one command
-
+             
           GLOBAL OPTIONS:
              --version, -v  print the version
              --help, -h   show help
@@ -51,11 +50,12 @@ layout: home
 
 .how-to-use
   .title
-    %h4 Building
+    %h4 Installing
   .description
-    %p You need to have installed go-bindata to build the file assets into Gort for a single standalone executable:
-    :markdown
-          go get github.com/jteeuwen/go-bindata/...
-    %p Once installed, you build the assets into the project like this:
-    :markdown
-          cd commands && go-bindata -pkg="commands" support/... && cd ..
+    %p Download the correct binary for your operating system, and then run it. You do not need to have the Go language installed. The Gort binary contains everything that you need to execute it with no other dependencies.
+
+    %a{:href=>"/documentation/getting_started/downloads"}
+      DOWNLOAD<br>
+      %p
+        OSX / WINDOWS / LINUX
+    
