--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -55,7 +55,5 @@ layout: home
     %p Download the correct binary for your operating system, and then run it. You do not need to have the Go language installed. The Gort binary contains everything that you need to execute it with no other dependencies.
 
     %a{:href=>"/documentation/getting_started/downloads"}
-      DOWNLOAD<br>
-      %p
-        OSX / WINDOWS / LINUX
+      Download it now for OSX, WINDOWS, & LINUX
     
