fix gobot title

--- a/source/documentation/getting_started/contact_us.html.haml
+++ b/source/documentation/getting_started/contact_us.html.haml
@@ -16,7 +16,7 @@ docs_contact_usg_active: true
         = link_to "(http://gort.io)" , "http://gort.io", target: :blank
         is a Command Line Interface (CLI) for RobotOps. Gort provides tools to scan for connected devices, upload firmware, and more.
       %li
-        Gort is written in the Go programming language
+        Gobot is written in the Go programming language
         = link_to "(http://golang.org)" , "http://golang.org", target: :blank
         for maximum speed and portability.
       %li
