--- a/source/documentation/getting_started/downloads.html.haml
+++ b/source/documentation/getting_started/downloads.html.haml
@@ -14,29 +14,38 @@ docs_downloads_active: true
     %h2 OSX
     .buttons
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.2.0/gort_darwin_386", target: "_blank"}
-          <i class="fa fa-download"></i> gort_darwin_386
+        %a{href:"https://s3.amazonaws.com/gort-io/0.2.1/gort_0.2.1_darwin_386.zip", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.2.1_darwin_386.zip
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.2.0/gort_darwin_amd64", target: "_blank"}
-          <i class="fa fa-download"></i> gort_darwin_amd64
+        %a{href:"https://s3.amazonaws.com/gort-io/0.2.1/gort_0.2.1_darwin_amd64.zip", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.2.1_darwin_amd64.zip
     %br
     %h2 Windows
     .buttons
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.2.0/gort_windows_386.exe", target: "_blank"}
-          <i class="fa fa-download"></i> gort_windows_386.exe
+        %a{href:"https://s3.amazonaws.com/gort-io/0.2.1/gort_0.2.1_windows_386.zip", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.2.1_windows_386.zip
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.2.0/gort_windows_amd64.exe", target: "_blank"}
-          <i class="fa fa-download"></i> gort_windows_amd64.exe
+        %a{href:"https://s3.amazonaws.com/gort-io/0.2.1/gort_0.2.1_windows_amd64.zip", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.2.1_windows_386.zip
     %br
     %h2 Linux
     .buttons
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.2.0/gort_linux_386", target: "_blank"}
-          <i class="fa fa-download"></i> gort_linux_386
+        %a{href:"https://s3.amazonaws.com/gort-io/0.2.1/gort_0.2.1_amd64.deb", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.2.1_amd64.deb
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.2.0/gort_linux_amd64", target: "_blank"}
-          <i class="fa fa-download"></i> gort_linux_amd64
+        %a{href:"https://s3.amazonaws.com/gort-io/0.2.1/gort_0.2.1_armhf.deb", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.2.1_armhf.deb
       .green-button
-        %a{href:"https://s3.amazonaws.com/gort-io/0.2.0/gort_linux_arm", target: "_blank"}
-          <i class="fa fa-download"></i> gort_linux_arm
+        %a{href:"https://s3.amazonaws.com/gort-io/0.2.1/gort_0.2.1_i386.deb", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.2.1_i386.deb
+      .green-button
+        %a{href:"https://s3.amazonaws.com/gort-io/0.2.1/gort_0.2.1_linux_386.tar.gz", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.2.1_linux_386.tar.gz
+      .green-button
+        %a{href:"https://s3.amazonaws.com/gort-io/0.2.1/gort_0.2.1_linux_amd64.tar.gz", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.2.1_linux_amd64.tar.gz
+      .green-button
+        %a{href:"https://s3.amazonaws.com/gort-io/0.2.1/gort_0.2.1_linux_arm.tar.gz", target: "_blank"}
+          <i class="fa fa-download"></i> gort_0.2.1_linux_arm.tar.gz
