--- a/source/partials/_nav_home.html.haml
+++ b/source/partials/_nav_home.html.haml
@@ -3,13 +3,13 @@
     = partial "partials/menu"
 
     .hero
-      .col7
+      .content
         %h2
           %span.blue GORT
           is a Command Line Toolkit for RobotOps
           .square
         %h5 Gort provides tools to scan for connected devices, upload firmware, and more.
-      .col5
+      .animation
         %script{type:"text/javascript", src:"https://asciinema.org/a/10306.js", id:"asciicast-10306", "data-autoplay" => "1"}
 
 -else
