--- a/source/stylesheets/partials/_documentation.scss
+++ b/source/stylesheets/partials/_documentation.scss
@@ -57,7 +57,7 @@
 
 		.side-bar {
 
-			@media screen and (min-width: 320px) and (max-width: 480px) {
+			@media screen and (max-width: 768px) {
 		  		@include span-columns(12);
 			}
 
@@ -126,7 +126,7 @@
 			@include span-columns(9);
 			color: #666;
 
-			@media screen and (min-width: 320px) and (max-width: 480px) {
+			@media screen and (min-width: 320px) and (max-width: 768px) {
 
 		  		@include span-columns(12);
 		  		margin-top: em(20);
