--- a/source/stylesheets/partials/_footer.scss
+++ b/source/stylesheets/partials/_footer.scss
@@ -5,18 +5,19 @@ footer {
   .container {
 
     @include outer-container;
-    padding: em(30) 0;
+    padding: em(30) em(5);
     color: $light-gray;
 
     .copy {
 
-    	@include span-columns(6);
+    	@include span-columns(7);
+      margin-top: 7px;
       text-align: right;
     }
 
     .THG {
 
-    	@include span-columns(6);
+    	@include span-columns(5);
     }
   }
 }
