--- a/source/stylesheets/partials/_nav.scss
+++ b/source/stylesheets/partials/_nav.scss
@@ -1,3 +1,48 @@
+nav {
+
+	@include span-columns(10);
+	font-family: 'Roboto', Helvetica, sans-serif;
+
+	ul {
+
+		display: inline-block;
+		@include span-columns(12);
+		margin-bottom: em(10);
+
+		a {
+
+			float: right;
+			border: $blue 2px solid;
+			padding: 8px;
+			text-align: center;
+			margin-left: 20px;
+			width: 130px;
+			color: white;
+
+			&:hover {
+
+				background: $blue;
+				color: white;
+			}
+		}
+
+		.active {
+
+			background: $blue;
+			color: white;
+		}
+
+		.github a{
+
+				&:hover {
+
+				background: $blue;
+				color: white;
+			}
+		}
+	}
+}
+	
 .menu {
 
 	.container {
@@ -12,6 +57,12 @@
 	.logo {
 
 		@include span-columns(2);
+
+		@media screen and (max-width: 460px){
+
+			@include span-columns(12);
+			margin-bottom: 10px;
+		}
 
 		a {
 
@@ -38,50 +89,7 @@
 
 	}
 
-	nav {
-
-	  @include span-columns(10);
-	  font-family: 'Roboto', Helvetica, sans-serif;
-
-	  ul {
-
-	    display: inline-block;
-	    @include span-columns(12);
-	    margin-bottom: em(10);
-
-	    a {
-
-	    	float: right;
-	    	border: $blue 2px solid;
-	    	padding: 8px;
-	    	text-align: center;
-	    	margin-left: 20px;
-	    	width: 130px;
-	    	color: white;
-
-	    	&:hover {
-
-	    		background: $blue;
-	    		color: white;
-	    	}
-	    }
-
-	    .active {
-
-	    	background: $blue;
-	    	color: white;
-	    }
-
-	    .github a{
-
-				&:hover {
-
-	    		background: $blue;
-	    		color: white;
-	    	}
-	    }
-	  }
-	}
+	
 
 	.hero {
 
