--- a/source/stylesheets/partials/_nav_home.scss
+++ b/source/stylesheets/partials/_nav_home.scss
@@ -13,6 +13,12 @@
 
 		@include span-columns(2);
 
+		@media screen and (max-width: 460px){
+
+			@include span-columns(12);
+			margin-bottom: 10px;
+		}
+
 		a {
 
 			border: none;
@@ -34,43 +40,7 @@
 		}
 	}
 
-	nav {
 
-	  @include span-columns(10);
-	  font-family: 'Roboto', Helvetica, sans-serif;
-
-	  ul {
-
-	    @include span-columns(12);
-	    margin-bottom: em(10);
-
-	    a {
-
-	    	float: right;
-	    	border: $blue 2px solid;
-	    	padding: 8px;
-	    	text-align: center;
-	    	margin-left: 20px;
-	    	width: 130px;
-	    	color: white;
-
-	    	&:hover {
-
-	    		background: $blue;
-	    		color: white;
-	    	}
-	    }
-
-	    .github a{
-
-				&:hover {
-
-	    		background: $blue;
-	    		color: white;
-	    	}
-	    }
-	  }
-	}
 
 	.hero {
 
@@ -86,31 +56,47 @@
 			margin-top: 20px;
 		}
 
-		.col7 {
+		.content {
 
 			@include span-columns(7);
 			@include omega();
 			padding: em(70) 0;
 
 		}
-		.col5 {
+		.animation {
 
 			@include span-columns(5);
 			@include omega();
 		}
 
-		@media screen and (min-width: 320px) and (max-width: 480px) {
+		@media screen and (min-width: 951px) and (max-width: 1100px) {
 
-		  .col7 {
+		  .content {
+
+				@include span-columns(5);
+			}
+
+			.animation {
+
+				@include span-columns(7);
+				padding: em(10);
+				text-align: center;
+			}
+		}
+
+		@media screen and (max-width: 950px) {
+
+		  .content {
 
 				@include span-columns(12);
 				padding: em(10);
 			}
 
-			.col5 {
+			.animation {
 
 				@include span-columns(12);
 				padding: em(10);
+				text-align: center;
 			}
 		}
 
