remove code duplication

--- a/source/stylesheets/partials/_nav.scss
+++ b/source/stylesheets/partials/_nav.scss
@@ -5,7 +5,6 @@ nav {
 
 	ul {
 
-		display: inline-block;
 		@include span-columns(12);
 		margin-bottom: em(10);
 
@@ -26,12 +25,6 @@ nav {
 			}
 		}
 
-		.active {
-
-			background: $blue;
-			color: white;
-		}
-
 		.github a{
 
 				&:hover {
@@ -41,8 +34,63 @@ nav {
 			}
 		}
 	}
+
+	@media screen and (max-width: 460px){
+
+		@include span-columns(12);
+
+		ul {
+
+	    @include span-columns(12);
+	    text-align: center;
+	    
+		    li{
+		    	display: inline-block;
+			}
+
+		    a{
+		    	float: left;
+		    	margin: 0 20px;
+		    }
+		}
+	}
 }
-	
+
+.logo {
+
+	@include span-columns(2);
+
+	@media screen and (max-width: 460px){
+
+		@include span-columns(12);
+		margin-bottom: 10px;
+	}
+
+	a {
+
+		border: none;
+		float: left;
+		padding: 0;
+		margin: 0;
+		color: white;
+
+		&:hover {
+
+			background: transparent;
+		}
+
+		h1 {
+
+			font-family: 'Roboto', Helvetica, sans-serif;
+			font-weight: 400;
+			background-size: 45px;
+			padding-left: 50px;
+		}
+
+	}
+
+}
+
 .menu {
 
 	.container {
@@ -54,75 +102,8 @@ nav {
 	color: white;
 	padding: em(20) 0;
 
-	.logo {
+	h1 {
 
-		@include span-columns(2);
-
-		@media screen and (max-width: 460px){
-
-			@include span-columns(12);
-			margin-bottom: 10px;
-		}
-
-		a {
-
-			border: none;
-			float: left;
-			padding: 0;
-			margin: 0;
-			color: white;
-
-			&:hover {
-
-				background: transparent;
-			}
-
-			h1 {
-
-				font-family: 'Roboto', Helvetica, sans-serif;
-				background: url(images/iconB.png) no-repeat left center;
-				background-size: 45px;
-				padding-left: 50px;
-			}
-
-		}
-
-	}
-
-	
-
-	.hero {
-
-		@include outer-container;
-		padding: 40px 0;
-
-		h2,h5 {
-
-			font-family: 'Vera-Mono', Helvetica, sans-serif;
-		}
-		h5 {
-
-			margin-top: 20px;
-		}
-
-		.col7 {
-
-			@include span-columns(7);
-			@include omega();
-		}
-
-		.col5 {
-
-			@include span-columns(5);
-			@include omega();
-		}
-		
-		.square {
-
-			background: $blue;
-			width: 15px;
-			height: 30px;
-			display: inline-block;
-		}
+		background: url(images/iconB.png) no-repeat left center;
 	}
 }
