--- a/source/documentation/getting_started/index.html.haml
+++ b/source/documentation/getting_started/index.html.haml
@@ -14,7 +14,7 @@ docs_home_active: true
   %h2 How To Use
   .description
     :markdown
-          $ ./gort
+          $ gort
           NAME:
              gort - Command Line Utility for RobotOps
 
@@ -22,21 +22,23 @@ docs_home_active: true
              gort [global options] command [command options] [arguments...]
 
           VERSION:
-             0.2.0
+             0.3.0
 
           COMMANDS:
-             scan   Scan for connected devices on Serial, USB, or Bluetooth ports
-             bluetooth  Pair, unpair & connect to bluetooth devices.
-             arduino  Install avrdude, and upload sketches to your Arduino
-             spark  Upload sketches to your Spark
-             digispark  Configure your Digispark microcontroller
-             crazyflie  Configure your Crazyflie
-             klaatu barada nikto
-             help, h  Shows a list of commands or help for one command
+             scan         Scan for connected devices on Serial, USB, or Bluetooth ports
+             bluetooth    Pair, unpair & connect to bluetooth devices.
+             arduino      Install avrdude, and upload HEX files to your Arduino
+             spark        Upload sketches to your Spark
+             digispark    Configure your Digispark microcontroller
+             crazyflie    Configure your Crazyflie
+             klaatu       barada nikto
+             dronedrop    Install, uninstall, update and download dronedrop firmware
+             help, h      Shows a list of commands or help for one command
              
           GLOBAL OPTIONS:
-             --version, -v  print the version
-             --help, -h   show help
+             --help, -h           show help
+             --version, -v        print the version
+             
   %h5 Scan for connected serial devices:
   .description
     :markdown
