--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -26,21 +26,23 @@ layout: home
              gort [global options] command [command options] [arguments...]
 
           VERSION:
-             0.2.1
+             0.3.0
 
           COMMANDS:
-             scan   Scan for connected devices on Serial, USB, or Bluetooth ports
-             bluetooth  Scan, pair, unpair bluetooth devices. Establishes serial to Bluetooth connection.
-             arduino  Install avrdude, and upload sketches to your Arduino
-             spark  Upload sketches to your Spark
-             digispark  Configure your Digispark microcontroller
-             crazyflie  Configure your Crazyflie
-             klaatu barada nikto
-             help, h  Shows a list of commands or help for one command
-
+             scan         Scan for connected devices on Serial, USB, or Bluetooth ports
+             bluetooth    Pair, unpair & connect to bluetooth devices.
+             arduino      Install avrdude, and upload HEX files to your Arduino
+             spark        Upload sketches to your Spark
+             digispark    Configure your Digispark microcontroller
+             crazyflie    Configure your Crazyflie
+             klaatu       barada nikto
+             dronedrop    Install, uninstall, update and download dronedrop firmware
+             help, h      Shows a list of commands or help for one command
+             
           GLOBAL OPTIONS:
-             --version, -v  print the version
-             --help, -h   show help
+             --help, -h           show help
+             --version, -v        print the version
+             
   .title
     %h6 Scan for connected serial devices:
   .description
