--- a/source/documentation/getting_started/contact_us.html.haml
+++ b/source/documentation/getting_started/contact_us.html.haml
@@ -10,26 +10,6 @@ docs_contact_usg_active: true
 .content-info
   %h1.title-top Contact Us
   .description
-    %ul
-      %li
-        Gort
-        = link_to "(http://gort.io)" , "http://gort.io", target: :blank
-        is a Command Line Interface (CLI) for RobotOps. Gort provides tools to scan for connected devices, upload firmware, and more.
-      %li
-        Gobot is written in the Go programming language
-        = link_to "(http://golang.org)" , "http://golang.org", target: :blank
-        for maximum speed and portability.
-      %li
-        Want to use Golang to program your robots? Check out our open source robotics framework Gobot
-        = link_to "(http://gobot.io)" , "http://gobot.io", target: :blank
-      %li
-        Want to use Javascript on Robots? Check out Cylon.js
-        = link_to "(http://cylonjs.com)", "http://cylonjs.com", target: :blank
-      %li
-        Want to use Ruby on robots? Check out Artoo
-        = link_to "(http://artoo.io)" , "http://artoo.io", target: :blank
-
-    %br
     %h4 IRC
     %br
     %p Need more help? Just want to say "Hello"? Come visit us on IRC freenode #robotops
@@ -39,3 +19,16 @@ docs_contact_usg_active: true
     %p
       If you need help or you feel we can improve something, let us know! Open a
       = link_to "new issue.", "https://github.com/hybridgroup/gort/issues", target: :blank
+    %br
+    %h4 Check Out Our Robotics Frameworks
+    %br
+    %ul
+      %li
+        Want to use Golang to program your robots? Check out our open source robotics framework 
+        = link_to "Gobot" , "http://gobot.io", target: :blank
+      %li
+        Want to use Javascript on Robots? Check out
+        = link_to "Cylon.js", "http://cylonjs.com", target: :blank
+      %li
+        Want to use Ruby on robots? Check out 
+        = link_to "Artoo" , "http://artoo.io", target: :blank
