--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -26,23 +26,22 @@ layout: home
              gort [global options] command [command options] [arguments...]
 
           VERSION:
-             0.3.0
+             0.4.0
 
           COMMANDS:
              scan         Scan for connected devices on Serial, USB, or Bluetooth ports
-             bluetooth    Pair, unpair & connect to bluetooth devices.
+             bluetooth    Pair, connect, & unpair bluetooth devices.
              arduino      Install avrdude, and upload HEX files to your Arduino
              spark        Upload sketches to your Spark
              digispark    Configure your Digispark microcontroller
              crazyflie    Configure your Crazyflie
              klaatu       barada nikto
-             dronedrop    Install, uninstall, update and download dronedrop firmware
              help, h      Shows a list of commands or help for one command
-             
+
           GLOBAL OPTIONS:
              --help, -h           show help
              --version, -v        print the version
-             
+
   .title
     %h6 Scan for connected serial devices:
   .description
@@ -58,4 +57,3 @@ layout: home
 
     %a{:href=>"/documentation/getting_started/downloads"}
       Download it now for OSX, WINDOWS, & LINUX
-
