Changes coming for new version

--- a/source/documentation/cli/arduino.html.haml
+++ b/source/documentation/cli/arduino.html.haml
@@ -10,8 +10,8 @@ docs_cli_arduino_active: true
 .content-info
   %h1.title-top Arduino
   .description
-    %h3 
-      %b gort [global options] command [command options] [arguments...]
+    %h3
+      %b gort [global options] command <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p Install avrdude, and upload sketches to your Arduino
@@ -57,4 +57,3 @@ docs_cli_arduino_active: true
           avrdude: safemode: Fuses OK
 
           avrdude done.  Thank you.
-
