--- a/source/documentation/cli/scan.html.haml
+++ b/source/documentation/cli/scan.html.haml
@@ -10,12 +10,12 @@ docs_cli_scan_active: true
 .content-info
   %h1.title-top Scan
   .description
-    %h3 
-      %b gort [global options] command [command options] [arguments...]
+    %h3
+      %b gort [global options] command <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p Scan for connected devices on Serial, USB, or Bluetooth ports
     :markdown
-          $ gort scan 
+          $ gort scan
           Usage:
           gort scan [serial|usb|bluetooth]
