--- a/source/documentation/cli/spark.html.haml
+++ b/source/documentation/cli/spark.html.haml
@@ -1,7 +1,7 @@
 ---
 title: Documentation - Spark
 author: The Hybrid Group
-description: Gort Documentation - Spark
+description: Gort Documentation - Particle
 layout: documentation
 active_docs: true
 docs_cli_spark_active: true
@@ -10,12 +10,12 @@ docs_cli_spark_active: true
 .content-info
   %h1.title-top Spark
   .description
-    %h3 
-      %b gort [global options] command [command options] [arguments...]
+    %h3
+      %b gort [global options] command <required arguments> [optional arguments...]
     %br
     %h4 Description
-    %p Upload sketches to your Spark.
+    %p Upload sketches to your Particle Photon.
     :markdown
-          $ gort spark 
+          $ gort spark
           Usage:
           gort spark upload [accessToken] [deviceId] [default|voodoospark|path name] # uploads sketch to Spark
