--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -23,7 +23,7 @@ layout: home
              gort - Command Line Utility for RobotOps
 
           USAGE:
-             gort [global options] command [command options] [arguments...]
+             gort [global options] command <required arguments> [optional arguments...]
 
           VERSION:
              0.4.0
