--- a/source/documentation/cli/bluetooth.html.haml
+++ b/source/documentation/cli/bluetooth.html.haml
@@ -10,14 +10,14 @@ docs_cli_bluetooth_active: true
 .content-info
   %h1.title-top Bluetooth
   .description
-    %h3 
-      %b gort [global options] command [command options] [arguments...]
+    %h3
+      %b gort [global options] command <required arguments> [optional arguments...]
     %br
     %h4 Description
-    %p Pair, unpair & connect to bluetooth devices.
+    %p Pair, connect, & unpair bluetooth devices.
     :markdown
-          $ gort bluetooth 
+          $ gort bluetooth
           Usage:
           gort bluetooth pair <address> [hciX]
-          gort bluetooth unpair <address> [hciX]
+          gort bluetooth connect <port> <address> [hciX]
           gort bluetooth unpair <address> [hciX]
