--- a/source/documentation/cli/crazyflie.html.haml
+++ b/source/documentation/cli/crazyflie.html.haml
@@ -10,14 +10,12 @@ docs_cli_crazyflie_active: true
 .content-info
   %h1.title-top Crazyflie
   .description
-    %h3 
-      %b gort [global options] command [command options] [arguments...]
+    %h3
+      %b gort [global options] command <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p Configure your Crazyflie.
     :markdown
-          $ gort crazyflie 
+          $ gort crazyflie
           Usage:
           gort crazyflie set-udev-rules # set udev rules needed to connect to Crazyflie
-
-
