--- a/source/documentation/cli/digispark.html.haml
+++ b/source/documentation/cli/digispark.html.haml
@@ -10,15 +10,14 @@ docs_cli_digispark_active: true
 .content-info
   %h1.title-top Digispark
   .description
-    %h3 
-      %b gort [global options] command [command options] [arguments...]
+    %h3
+      %b gort [global options] command <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p Configure your Digispark microcontroller.
     :markdown
-          $ gort digispark 
+          $ gort digispark
           Usage:
           gort digispark install # installs software to upload firmware to Digispark
           gort digispark upload [littlewire] # uploads firmware to Digispark
           gort digispark set-udev-rules # set udev rules needed to connect to Digispark
-
