--- a/source/documentation/cli/klaatu.html.haml
+++ b/source/documentation/cli/klaatu.html.haml
@@ -10,11 +10,10 @@ docs_cli_klaatu_active: true
 .content-info
   %h1.title-top Klatuu
   .description
-    %h3 
-      %b gort [global options] command [command options] [arguments...]
+    %h3
+      %b gort [global options] command <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p barada nikto.
     :markdown
-          $ gort klaatu barada nikto 
-         
+          $ gort klaatu barada nikto
