--- a/source/documentation/cli/particle.html.haml
+++ b/source/documentation/cli/particle.html.haml
@@ -1,14 +1,14 @@
 ---
-title: Documentation - Spark
+title: Documentation - Particle
 author: The Hybrid Group
 description: Gort Documentation - Particle
 layout: documentation
 active_docs: true
-docs_cli_spark_active: true
+docs_cli_particle_active: true
 ---
 
 .content-info
-  %h1.title-top Spark
+  %h1.title-top Particle
   .description
     %h3
       %b gort [global options] command <required arguments> [optional arguments...]
@@ -16,6 +16,6 @@ docs_cli_spark_active: true
     %h4 Description
     %p Upload sketches to your Particle Photon.
     :markdown
-          $ gort spark
+          $ gort particle
           Usage:
-          gort spark upload [accessToken] [deviceId] [default|voodoospark|path name] # uploads sketch to Spark
+          gort particle upload <accessToken> <deviceId> <default|voodoospark|path name> # uploads sketch to Particle
