--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -32,7 +32,7 @@ layout: home
              scan         Scan for connected devices on Serial, USB, or Bluetooth ports
              bluetooth    Pair, connect, & unpair bluetooth devices.
              arduino      Install avrdude, and upload HEX files to your Arduino
-             spark        Upload sketches to your Spark
+             particle     Upload sketches to your Particle Photon
              digispark    Configure your Digispark microcontroller
              crazyflie    Configure your Crazyflie
              klaatu       barada nikto
