Add Homebrew installation info for OSX

--- a/source/documentation/getting_started/downloads.html.haml
+++ b/source/documentation/getting_started/downloads.html.haml
@@ -12,6 +12,11 @@ docs_downloads_active: true
     %p  We now have precompiled binaries, or you can also build from source if you prefer.
     %p  The Gort CLI provides many useful features on many hardware platforms, and has no other dependencies. You install Gort separately from any framework, which means you can use it to program Arduinos with the Firmata firmware also compatible with Cylon.js, Gobot, Artoo, & Johnny-Five.
     %h2 OSX
+    %p If you are using Homebrew, you can install Gort easily by typing:
+    :markdown
+          $ brew install hybridgroup/tools/gort
+
+    %p Otherwise, download using one of the following links:
     .buttons
       .green-button
         %a{href:"https://s3.amazonaws.com/gort-io/0.5.2/gort_0.5.2_darwin_386.zip", target: "_blank"}
