--- a/source/documentation/cli/crazyflie.html.haml
+++ b/source/documentation/cli/crazyflie.html.haml
@@ -11,7 +11,7 @@ docs_cli_crazyflie_active: true
   %h1.title-top Crazyflie
   .description
     %h3
-      %b gort [global options] command <required arguments> [optional arguments...]
+      %b gort [global options] crazyflie <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p Configure your Crazyflie.
