--- a/source/documentation/cli/digispark.html.haml
+++ b/source/documentation/cli/digispark.html.haml
@@ -11,7 +11,7 @@ docs_cli_digispark_active: true
   %h1.title-top Digispark
   .description
     %h3
-      %b gort [global options] command <required arguments> [optional arguments...]
+      %b gort [global options] digispark <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p Configure your Digispark microcontroller.
