--- a/source/documentation/cli/klaatu.html.haml
+++ b/source/documentation/cli/klaatu.html.haml
@@ -1,17 +1,17 @@
 ---
 title: Documentation - Klatuu
 author: The Hybrid Group
-description: Gort Documentation - Klatuu
+description: Gort Documentation - Klaatu
 layout: documentation
 active_docs: true
 docs_cli_klaatu_active: true
 ---
 
 .content-info
-  %h1.title-top Klatuu
+  %h1.title-top Klaatu
   .description
     %h3
-      %b gort [global options] command <required arguments> [optional arguments...]
+      %b gort [global options] klaatu <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p barada nikto.
