--- a/source/documentation/cli/particle.html.haml
+++ b/source/documentation/cli/particle.html.haml
@@ -11,7 +11,7 @@ docs_cli_particle_active: true
   %h1.title-top Particle
   .description
     %h3
-      %b gort [global options] command <required arguments> [optional arguments...]
+      %b gort [global options] particle <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p Upload sketches to your Particle Photon.
