--- a/source/documentation/cli/arduino.html.haml
+++ b/source/documentation/cli/arduino.html.haml
@@ -11,49 +11,43 @@ docs_cli_arduino_active: true
   %h1.title-top Arduino
   .description
     %h3
-      %b gort [global options] command <required arguments> [optional arguments...]
+      %b gort [global options] arduino <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p Install avrdude, and upload sketches to your Arduino
     :markdown
           $ gort arduino
-          Usage:
-          gort arduino install                                   # installs avrdude to allow uploading of sketchesto     Arduino
-          gort arduino upload firmata [port]                    # uploads Firmata sketch to Arduino
-          gort arduino upload rapiro [port]                     # uploads Rapiro sketch to Arduino
-          gort arduino upload [custom-firmware-filename] [port] # uploads a custom sketch to Arduino
 
+          Usage:
+            # installs avrdude to allow uploading of sketches to Arduino
+            gort arduino install
+
+            # uploads Firmata sketch to Arduino
+            gort arduino upload firmata <port> [flags]
+
+            # uploads Rapiro sketch to Arduino
+            gort arduino upload rapiro <port> [flags]
+
+            # uploads a custom sketch to Arduino
+            gort arduino upload <custom-firmware-filename> <port> [flags]
+
+              upload flags:
+                -b < m328 | uno | nano | mini | ethernet | fio | m168 |
+                     diecimila | stamp | mega | mega1280 | mega2560 | megaADK |
+                     leonardo | robot | micro | esplora >
 
     %b Notes:
     :markdown
-      To be able to run the upload command
+      To be able to run the `gort arduino upload` command
       you must run `gort arduino install` first.
-      The serial port must have the correct permissions for your
-      user to read and write, or run it as root (sudo it).
 
-          $ gort arduino upload ttyACM0
+      To choose a specific board type for upload, use the `-b` flag.
 
-          avrdude: AVR device initialized and ready to accept instructions
+      For example, to upload the Firmata sketch to an Arduino Nano:
 
-          Reading | ################################################## | 100% 0.00s
+          $ gort arduino upload firmata /dev/ttyACM0 -b nano
 
-          avrdude: Device signature = 0x1e950f
-          avrdude: reading input file "/home/myuser/workspace/cylon-cmds/node_modules/cylon-   firmata/src/cli/hex/StandardFirmata.cpp.hex"
-          avrdude: writing flash (11452 bytes):
+      In addition, the serial port must have the correct permissions for your
+      user to read and write, or run the command as root by using sudo:
 
-          Writing | ################################################## | 100% 1.84s
-
-          avrdude: 11452 bytes of flash written
-          avrdude: verifying flash memory against /home/myuser/workspace/cylon-cmds/node_modules/cylon-   firmata/src/cli/hex/StandardFirmata.cpp.hex:
-          avrdude: load data flash data from input file /home/myuser/workspace/cylon-cmds/node_modules/cylon-   firmata/src/cli/hex/StandardFirmata.cpp.hex:
-          avrdude: input file /home/myuser/workspace/cylon-cmds/node_modules/cylon-firmata/src/cli/hex/StandardFirmata.   cpp.hex contains 11452 bytes
-          avrdude: reading on-chip flash data:
-
-          Reading | ################################################## | 100% 1.47s
-
-          avrdude: verifying ...
-          avrdude: 11452 bytes of flash verified
-
-          avrdude: safemode: Fuses OK
-
-          avrdude done.  Thank you.
+          $ sudo gort arduino upload firmata /dev/ttyACM0 -b nano
