--- a/source/documentation/cli/scan.html.haml
+++ b/source/documentation/cli/scan.html.haml
@@ -11,7 +11,7 @@ docs_cli_scan_active: true
   %h1.title-top Scan
   .description
     %h3
-      %b gort [global options] command <required arguments> [optional arguments...]
+      %b gort [global options] scan <required arguments> [optional arguments...]
     %br
     %h4 Description
     %p Scan for connected devices on Serial, USB, or Bluetooth ports
