Fix home page version and no auto-playback of asciicinema
Signed-off-by: deadprogram <ron@hybridgroup.com>

--- a/source/partials/_nav_home.html.haml
+++ b/source/partials/_nav_home.html.haml
@@ -10,7 +10,7 @@
           .square
         %h5 Gort provides tools to scan for connected devices, upload firmware, and more.
       .animation
-        %script{type:"text/javascript", src:"https://asciinema.org/a/10306.js", id:"asciicast-10306", "data-autoplay" => "1"}
+        %script{type:"text/javascript", src:"https://asciinema.org/a/10306.js", id:"asciicast-10306"}
 
 -else
   %header.menu
