--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -20,27 +20,27 @@ layout: home
     :markdown
           $ gort
           NAME:
-             gort - Command Line Utility for RobotOps
+          gort - Command Line Utility for RobotOps
 
           USAGE:
-             gort [global options] command [command options] [arguments...]
+          gort [global options] command [command options] [arguments...]
 
           VERSION:
-             0.5.0
+          0.6.1
 
           COMMANDS:
-             scan         Scan for connected devices on Serial, USB, or Bluetooth ports
-             bluetooth    Pair, unpair & connect to bluetooth devices.
-             arduino      Install avrdude, and upload HEX files to your Arduino
-             particle     Upload sketches to your Particle Photon
-             digispark    Configure your Digispark microcontroller
-             crazyflie    Configure your Crazyflie
-             klaatu       barada nikto
-             help, h      Shows a list of commands or help for one command
+          scan         Scan for connected devices on Serial, USB, or Bluetooth ports
+          bluetooth    Connect & disconnect bluetooth devices.
+          arduino      Install avrdude, and upload HEX files to your Arduino
+          particle     Upload sketches to your Particle Photon
+          digispark    Configure your Digispark microcontroller
+          crazyflie    Configure your Crazyflie
+          klaatu       barada nikto
+          help, h      Shows a list of commands or help for one command
 
           GLOBAL OPTIONS:
-             --help, -h           show help
-             --version, -v        print the version
+          --help, -h           show help
+          --version, -v        print the version
 
   .title
     %h6 Scan for connected serial devices:
