--- a/source/documentation/cli/particle.html.haml
+++ b/source/documentation/cli/particle.html.haml
@@ -18,4 +18,4 @@ docs_cli_particle_active: true
     :markdown
           $ gort particle
           Usage:
-          gort particle upload <accessToken> <deviceId> <default|voodoospark|path name> # uploads sketch to Particle
+          gort particle upload <accessToken> <deviceId> <default|path name> # uploads sketch to Particle
