--- a/source/documentation/cli/scan.html.haml
+++ b/source/documentation/cli/scan.html.haml
@@ -18,4 +18,4 @@ docs_cli_scan_active: true
     :markdown
           $ gort scan
           Usage:
-          gort scan [serial|usb|bluetooth]
+          gort scan [serial|usb|bluetooth|ble]
